--- a/app.css
+++ b/app.css
@@ -174,6 +174,7 @@ section div.contact-info--wrap {
   padding: 0 60px;
   position: relative;
   max-width: 1400px;
+  min-height: 100vh;
   margin: auto; }
   section div.contact-info--wrap div.emoji {
     font-size: 22px;
@@ -231,6 +232,81 @@ footer.contactpage-footer {
     position: relative;
     height: 100vh;
     width: 100vw; }
+
+section.testing {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  pointer-events: none; }
+
+section.collection-title {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  font-family: "Trade Gothic"; }
+  section.collection-title div.title-wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100vw;
+    height: 100vh;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    overflow: hidden; }
+  section.collection-title div.parallax-title {
+    width: 100%;
+    -webkit-backface-visibility: hidden; }
+  section.collection-title .first {
+    z-index: 99;
+    font-size: 128px;
+    text-align: center; }
+
+main.collection-grid {
+  background-color: transparent;
+  position: absolute;
+  margin-top: 100vh; }
+
+section.collection-grid--wrap img {
+  width: 100%; }
+
+section.collection-grid--wrap div.row-col--1.start {
+  display: flex;
+  justify-content: flex-start;
+  width: 100vw; }
+
+section.collection-grid--wrap div.row-col--1.end {
+  display: flex;
+  justify-content: flex-end; }
+
+section.collection-grid--wrap div.row-col--1.center {
+  display: flex;
+  justify-content: center; }
+
+section.collection-grid--wrap div.row-col--2.start {
+  display: flex;
+  justify-content: flex-start;
+  width: 100vw; }
+
+section.collection-grid--wrap div.row-col--2.end {
+  display: flex;
+  justify-content: flex-end; }
+
+section.collection-grid--wrap div.row-col--2.center {
+  display: flex;
+  justify-content: center; }
+
+section.collection-grid--wrap div.col-4 {
+  width: 33.33vw;
+  padding: 40px; }
+
+section.collection-grid--wrap div.col-6 {
+  width: 50vw;
+  padding: 40px; }
+
+section.collection-grid--wrap div.col-6.flush {
+  padding: 0; }
 
 @keyframes loaderLine {
   0% {
