--- a/css/contact.scss
+++ b/css/contact.scss
@@ -55,6 +55,7 @@ section.contact-title {
     padding: 0 60px;
     position: relative;
     max-width: 1400px;
+    min-height: 100vh;
     margin: auto;
 
 
