--- a/app.css
+++ b/app.css
@@ -316,9 +316,9 @@ section.collection-grid--wrap div.col-6.flush {
 
 @keyframes loaderLine {
   0% {
-    width: 0%; }
+    width: 350px; }
   100% {
-    width: 100%; } }
+    width: 0%; } }
 
 @keyframes fadeup {
   0% {
@@ -400,15 +400,23 @@ div.loader {
   pointer-events: none;
   font-family: Helvetica, sans-serif;
   font-size: 12px;
-  color: #999999; }
-  div.loader div.loader-line {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: black;
-    animation: loaderLine 1s cubic-bezier(0.72, 0, 0.01, 1); }
+  color: #999999;
+  display: flex; }
+  div.loader div.loader-line--wrap {
+    position: relative;
+    width: 350px;
+    height: 160px;
+    margin: auto auto; }
+    div.loader div.loader-line--wrap div.loader-line {
+      position: absolute;
+      top: 0%;
+      right: 0%;
+      width: 350px;
+      height: 160px;
+      background-color: black;
+      transition: width 1s cubic-bezier(0.72, 0, 0.01, 1); }
+    div.loader div.loader-line--wrap div.loader-line.animated {
+      width: 0px; }
   div.loader div.loader-page--description {
     height: 100%;
     display: flex;
