--- a/css/app.scss
+++ b/css/app.scss
@@ -16,11 +16,11 @@
 
 @keyframes loaderLine {
     0% {
-        width: 0%;
+        width: 350px;
     }
 
     100% {
-        width: 100%;
+        width: 0%;
     }
 }
 
@@ -97,15 +97,33 @@ div.loader {
     font-family: Helvetica, sans-serif;
     font-size: 12px;
     color: $grey-color;
+    display: flex;
 
-    div.loader-line {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background-color: $primary-color;
-        animation: loaderLine 1s cubic-bezier(.72,0,.01,1);
+    div.loader-line--wrap {
+        position: relative;
+        width: 350px;
+        height: 160px;
+        margin: auto auto;
+
+
+        div.loader-line {
+            position: absolute;
+            top: 0%;
+            right: 0%;
+            width: 350px;
+            height: 160px;
+            background-color: black;
+            transition: width 1s cubic-bezier(0.72, 0, 0.01, 1);
+            // animation: loaderLine 1.6s cubic-bezier(0.72, 0, 0.01, 1);
+            // transform: translate(-50%, -50%);
+        }
+
+        div.loader-line.animated {
+            width: 0px; 
+        }
+
+
+
     }
 
     div.loader-page--description {
