--- a/css/app.scss
+++ b/css/app.scss
@@ -90,6 +90,8 @@ div.loader {
     height: 100vh;
     background-color: white;
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 999;
     opacity: 1;
     transition: opacity 0.8s ease;
