--- a/app.css
+++ b/app.css
@@ -355,11 +355,23 @@ footer.collections {
   100% {
     transform: translateY(0px); } }
 
+@keyframes fadeOutTitle {
+  0% {
+    transform: translateY(0px); }
+  100% {
+    transform: translateY(-180px); } }
+
 @keyframes fadeInImage {
   0% {
     transform: translateY(75vh) rotate(20deg); }
   100% {
     transform: translateY(0%) rotate(10deg); } }
+
+@keyframes fadeOutImage {
+  0% {
+    transform: translateY(0%) rotate(10deg); }
+  100% {
+    transform: translateY(-75vh) rotate(0deg); } }
 
 @keyframes date {
   0% {
@@ -769,7 +781,8 @@ div.collection span div.project-coming--soon {
   padding: 30px; }
 
 a.collection-link h1 {
-  transition: color 0.3s ease; }
+  transition: color 0.3s ease;
+  overflow: hidden; }
 
 a.collection-link:hover {
   cursor: none; }
