--- a/css/app.scss
+++ b/css/app.scss
@@ -49,6 +49,11 @@
     100% {transform: translateY(0px)}
 }
 
+@keyframes fadeInCollectionTitle {
+    0% {transform: translateY(-175px)}
+    100% {transform: translateY(0px)}
+}
+
 @keyframes fadeOutTitle {
     0% {transform: translateY(0px)}
     100% {transform: translateY(-180px)}
