--- a/css/collections.scss
+++ b/css/collections.scss
@@ -79,7 +79,8 @@ section.collection-title {
 main.collection-grid {
   background-color: transparent;
   // position: absolute;
-  margin-top: calc(100vh - 120px);
+  // margin-top: calc(100vh - 120px);
+  margin-top: calc(100vh);
 }
 
 section.collection-grid--wrap {
