--- a/app.css
+++ b/app.css
@@ -155,10 +155,10 @@ section.contact-title {
 
 div.contact-page--links {
   display: flex;
-  flex-direction: column;
   margin-top: 60px; }
   div.contact-page--links span {
-    overflow: hidden; }
+    overflow: hidden;
+    margin-right: 20px; }
   div.contact-page--links a {
     color: #999999;
     font-size: 13px;
@@ -192,17 +192,38 @@ section div.contact-info--wrap {
   section div.contact-info--wrap div.contact-info {
     width: 50%;
     margin: 0 50%; }
+    section div.contact-info--wrap div.contact-info div.contact-info--summary {
+      margin-bottom: 40px; }
+    section div.contact-info--wrap div.contact-info div.contact-info--summary.highlight {
+      position: relative;
+      margin-bottom: 40px; }
+      section div.contact-info--wrap div.contact-info div.contact-info--summary.highlight .contact-info--mask {
+        height: 100%;
+        width: 100%;
+        background-color: white;
+        position: absolute;
+        right: 0;
+        top: 0; }
 
 main.main-contact {
   margin-bottom: 100vh; }
 
 footer.contactpage-footer {
-  height: 100vh;
+  min-height: 100vh;
   background-color: #fc3e17;
   position: fixed;
   bottom: 0;
   left: 0;
   z-index: -1; }
+  footer.contactpage-footer div.credit.alt {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%; }
+    footer.contactpage-footer div.credit.alt span:nth-child(1) {
+      margin-right: 8px;
+      color: black; }
+      footer.contactpage-footer div.credit.alt span:nth-child(1) a {
+        color: black; }
   footer.contactpage-footer div.logo-wrap div.spinner {
     width: 120px;
     height: 120px;
@@ -423,6 +444,9 @@ body {
 a {
   text-decoration: none; }
 
+a.primary-link {
+  color: black !important; }
+
 div.loader {
   width: 100%;
   height: 100vh;
@@ -565,7 +589,7 @@ div.menu {
   div.menu a {
     text-align: center;
     color: black;
-    font-size: 18px;
+    font-size: 22px;
     text-transform: uppercase; }
   div.menu .menu-container {
     display: flex;
@@ -622,10 +646,10 @@ div.menu-contact--links {
   width: 40%; }
   div.menu-contact--links a {
     font-size: 13px;
-    color: #575757;
+    color: black;
     transition: color 0.3s ease; }
     div.menu-contact--links a:hover {
-      color: black; }
+      color: #575757; }
 
 /* =========== footer =========== */
 footer {
