added menu adjustments

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -128,6 +128,11 @@ section.contact-title {
     margin-bottom: 100vh;
 }
 
+// section.footer-data {
+//     height: 100vh;
+//     background-color: transparent;
+// }
+
 footer.contactpage-footer {
     min-height: 100vh;
     background-color: $orange-color;
