--- a/app.css
+++ b/app.css
@@ -771,7 +771,8 @@ div.collection {
       align-items: center;
       justify-content: center;
       position: relative;
-      color: black; }
+      color: black;
+      padding: 20px; }
   div.collection div.img-span {
     display: flex;
     align-items: center;
@@ -800,11 +801,12 @@ div.collection {
     line-height: 1;
     transition: letter-spacing 0.8s ease; }
   div.collection img {
-    height: 60vh;
+    height: 52vh;
     will-change: transform;
     z-index: 0;
     transition: transform 0.8s;
-    transform: translateY(75vh); }
+    transform: translateY(75vh);
+    opacity: 0.9; }
 
 div.collection span div.project-coming--soon {
   position: absolute;
